--- a/makepkg.conf
+++ b/makepkg.conf
@@ -36,11 +36,11 @@ CHOST="x86_64-pc-linux-gnu"        #unknown to pc
 #-fexcess-precision=fast
 
 #-fpeel-loops"         #added -mtune=native
-CFLAGS="-march=k8 -msse3 -O2 -flto -pipe -ffast-math -ftracer  -funswitch-loops -fexcess-precision=fast" 
-#CFLAGS="-march=k8 -msse3 -O2  -pipe -ffast-math -ftracer  -funswitch-loops" 
+#CFLAGS="-march=k8 -msse3 -O2 -flto -pipe -ffast-math -ftracer  -funswitch-loops -fexcess-precision=fast" 
+CFLAGS="-march=k8 -msse3 -O2  -pipe -ffast-math -ftracer  -funswitch-loops" 
 #CXXFLAGS=${CFLAGS}
-#CXXFLAGS="-march=k8 -msse3 -O2  -pipe -ffast-math -ftracer -funswitch-loops"
-CXXFLAGS="-march=k8 -msse3 -O2 -flto  -pipe -ffast-math -ftracer -funswitch-loops -fexcess-precision=fast"
+CXXFLAGS="-march=k8 -msse3 -O2  -pipe -ffast-math -ftracer -funswitch-loops"
+#CXXFLAGS="-march=k8 -msse3 -O2 -flto  -pipe -ffast-math -ftracer -funswitch-loops -fexcess-precision=fast"
 # -fpeel-loops"
 #-floop-interchange -floop-strip-mine -floop-block
 #-- Make Flags: change this for DistCC/SMP systems
