--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 set -g default-command /bin/bash
+#setw -g aggressive-resize on
 setw -g utf8 on
 set -g bell-action any
 set -g visual-content on
@@ -26,18 +27,18 @@ setw -g mode-mouse on
 
 # More straight forward key bindings for splitting
 unbind %
-bind | split-window -v
-bind h split-window -v
+bind | split-window -h
+bind h split-window -h
 unbind '"'
-bind - split-window -h
-bind v split-window -h
+bind - split-window -v
+bind v split-window -v
 
 # History
-set -g history-limit 1000
+set -g history-limit 8000
 
 # Pane
 unbind o
-bind C-s down-pane
+#bind C-s down-pane
 
 # Terminal emulator window title
 set -g set-titles on
@@ -46,7 +47,8 @@ set -g set-titles-string '#S:#I.#P #W'
 # Status Bar
 set -g status-bg black
 set -g status-fg white
-set -g status-interval 1
+set -g status-justify centre
+set -g status-interval 10
 set -g status-left '#[fg=green]#H#[default]'
 set -g status-right  '#[fg=cyan,bold]%Y-%m-%d %H:%M:%S#[default]'
 
@@ -63,7 +65,7 @@ setw -g clock-mode-colour green
 setw -g clock-mode-style 24
 
 set mouse=a
-set ttymouse=xterm
+set ttymouse=xterm2
 
 unbind x
 bind-key x kill-pane
@@ -91,8 +93,8 @@ unbind F9
 unbind F10
 unbind F11 
 unbind F12
-bind-key -n F9 up-pane
-bind-key -n F10 down-pane
+bind-key -n F9 select-pane -t:.+
+bind-key -n F10 select-pane -t:.-
 bind-key -n F11 prev
 bind-key -n F12 next
 
@@ -100,15 +102,10 @@ set -g base-index 1
 
 # session initialization
 new -s term
-#set -tuake status-bg cyan
 neww -t 2
 neww -d -t 3
-#neww -d -t 4 ~/bin/torrent
-#neww -d -t 4 'screen -md  -c ~/.rtorrent/.screenrc'
-#neww -d -t 4 rtorrent
 
 new -s uake
-#set -tuake status-bg 
 neww -t 2
 neww -d
 neww -d
