--- a/.htoprc
+++ b/.htoprc
@@ -2,7 +2,7 @@
 # The parser is also very primitive, and not human-friendly.
 # (I know, it's in the todo list).
 fields=2 37 0 18 38 39 40 46 47 62 63 1 
-sort_key=46
+sort_key=47
 sort_direction=1
 hide_threads=0
 hide_kernel_threads=0
@@ -17,6 +17,6 @@ detailed_cpu_time=0
 color_scheme=0
 delay=15
 left_meters=AllCPUs Memory Swap 
-left_meter_modes=1 1 
+left_meter_modes=1 1 1 
 right_meters=Tasks LoadAverage Uptime 
 right_meter_modes=2 2 2 
