--- a/.rtorrent.rc
+++ b/.rtorrent.rc
@@ -1,20 +1,23 @@
-scgi_local = ~/.rtorrent/rpc.socket
+
+scgi_local = /home/raghavendra/.rtorrent/rpc.socket
 max_uploads = 8
 download_rate = 0
 upload_rate = 20
 session_on_completion = yes
-directory = ~/media
-session = ~/.session
-schedule = watch_directory,5,5,load_start=~/.rtorrent/watch/*.torrent
+directory = /home/raghavendra/Downloads
+session = /home/raghavendra/.rtorrent/session
+schedule = watch_directory,5,10,load_start=~/.rtorrent/watch/*.torrent
 schedule = low_diskspace,5,60,close_low_diskspace=100M
 schedule = session_save,300,300,session_save=
-port_range = <port-range>
+schedule = untied_directory,5,5,stop_untied=
+port_range = 25200-25200
 check_hash = yes
 use_udp_trackers = yes
 encryption = allow_incoming,try_outgoing,enable_retry
 dht = on
-dht_port = <port>
+dht_port = 6881
 peer_exchange = yes
 #hash_read_ahead = 10
 #hash_interval = 100
 #hash_max_tries = 10
+# vim: set syntax=off:
