--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-command /bin/bash
+set -g default-command /bin/zsh
 #setw -g aggressive-resize on
 setw -g utf8 on
 set -g bell-action any
