--- a/makepkg.conf
+++ b/makepkg.conf
@@ -22,6 +22,12 @@ BUILDENV=(fakeroot !distcc color !ccache)
 OPTIONS=(strip docs libtool emptydirs zipman purge)
 
 INTEGRITY_CHECK=(md5)
+#-- Options to be used when stripping binaries. See `man strip' for details.
+STRIP_BINARIES="--strip-all"
+#-- Options to be used when stripping shared libraries. See `man strip' for details.
+STRIP_SHARED="--strip-unneeded"
+#-- Options to be used when stripping static libraries. See `man strip' for details.
+STRIP_STATIC="--strip-debug"
 STRIP_DIRS=(bin lib sbin usr/{bin,lib,sbin,local/{bin,lib,sbin}} opt/*/{bin,lib,sbin})
 MAN_DIRS=({usr{,/local}{,/share},opt/*}/{man,info})
 PURGE_TARGETS=(usr/{,share}/info/dir .packlist *.pod)
