--- a/.tmux.conf
+++ b/.tmux.conf
@@ -112,5 +112,7 @@ neww -d
 neww -d
 neww -d
 
+bind -t vi-copy -n Enter send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
+
 unbind ]
 bind-key ] paste-buffer
