--- a/.tmux.conf
+++ b/.tmux.conf
@@ -112,7 +112,12 @@ neww -d
 neww -d
 neww -d
 
-bind -t vi-copy -n Enter send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
+bind > send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
+#bind -t vi-copy -n Enter send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
 
 unbind ]
 bind-key ] paste-buffer
+
+bind-key -t vi-edit Up history-up
+bind-key -t vi-edit Down history-down
+bind-key -t vi-edit C-u delete-line
