--- a/makepkg.conf
+++ b/makepkg.conf
@@ -1,8 +1,10 @@
-DLAGENTS=('ftp::/usr/bin/wget -c --passive-ftp -t 3 --waitretry=3 -O %o %u'
-          'http::/usr/bin/wget -c -t 3 --waitretry=3 -O %o %u'
-          'https::/usr/bin/wget -c -t 3 --waitretry=3 --no-check-certificate -O %o %u'
-          'rsync::/usr/bin/rsync -z %u %o'
-          'scp::/usr/bin/scp -C %u %o')
+DLAGENTS=( 'http::/usr/bin/aria2c -m 3 -o $(basename %o) %u'
+           'ftp::/usr/bin/aria2c -m 3 -o $(basename %o) %u'
+           'ftp::/usr/bin/wget -c --passive-ftp -t 3 --waitretry=3 -O %o %u'
+           'http::/usr/bin/wget -c -t 3 --waitretry=3 -O %o %u'
+           'https::/usr/bin/wget -c -t 3 --waitretry=3 --no-check-certificate -O %o %u'
+           'rsync::/usr/bin/rsync -z %u %o'
+           'scp::/usr/bin/scp -C %u %o')
 
 CARCH="x86_64"
 CHOST="x86_64-pc-linux-gnu"        #unknown to pc
@@ -14,7 +16,8 @@ CFLAGS="-march=native -O2 -pipe -ffast-math -ftracer -funswitch-loops"
 CXXFLAGS="-march=native -O2  -pipe -ffast-math -ftracer -funswitch-loops"
 #CXXFLAGS="-march=native -O2 -flto  -pipe -ffast-math -ftracer -funswitch-loops -fexcess-precision=fast"
 
-MAKEFLAGS="-j3"        # change commented to j3
+MAKEFLAGS="-j3"        
+# change commented to j3
 LDFLAGS="-Wl,-O1 -Wl,--as-needed -Wl,--hash-style=gnu"   
 
 BUILDENV=(fakeroot !distcc color !ccache)
@@ -35,7 +38,7 @@ DOC_DIRS=(usr/{,local/}{,share/}{doc,gtk-doc} opt/*/{doc,gtk-doc})
 
 PACKAGER="Raghavendra D Prabhu <raghuDOTprabhu13ATgmaildOtcom>"
 
-PKGEXT='.pkg.tar.xz'
+PKGEXT='.pkg.tar'
 SRCEXT='.src.tar.gz'
 
 # vim: set ft=sh ts=2 sw=2 et:
