--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,11 +39,11 @@ set -g history-limit 8000
 # Pane
 unbind o
 #bind C-s down-pane
-
+#set -g status-interval 2 
 # Terminal emulator window title
 set -g set-titles on
-set -g set-titles-string '#S:#I.#P #W'
-
+#set -g set-titles-string "#S:#I:#P:#(cat /proc/$$/cmdline | tr '\0' ' ')"
+set -g set-titles-string "#S:#I:#P:#W:#T"
 # Status Bar
 set -g status-bg black
 set -g status-fg white
