--- a/makepkg.conf
+++ b/makepkg.conf
@@ -9,12 +9,12 @@ DLAGENTS=( 'http::/usr/bin/aria2c -m 3 -o $(basename %o) %u'
 CARCH="x86_64"
 CHOST="x86_64-pc-linux-gnu"        #unknown to pc
 
-#CFLAGS="-march=native -O2 -flto -pipe -ffast-math -ftracer  -funswitch-loops -fexcess-precision=fast" 
-CFLAGS="-march=native -O2 -pipe -ffast-math -ftracer -funswitch-loops" 
+CFLAGS="-march=native -O2 -flto -pipe -ffast-math -ftracer  -funswitch-loops -fexcess-precision=fast" 
+#CFLAGS="-march=native -O2 -pipe -ffast-math -ftracer -funswitch-loops" 
 
 #CXXFLAGS=${CFLAGS}
-CXXFLAGS="-march=native -O2  -pipe -ffast-math -ftracer -funswitch-loops"
-#CXXFLAGS="-march=native -O2 -flto  -pipe -ffast-math -ftracer -funswitch-loops -fexcess-precision=fast"
+#CXXFLAGS="-march=native -O2  -pipe -ffast-math -ftracer -funswitch-loops"
+CXXFLAGS="-march=native -O2 -flto  -pipe -ffast-math -ftracer -funswitch-loops -fexcess-precision=fast"
 
 MAKEFLAGS="-j3"        
 # change commented to j3
