--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,9 +4,10 @@ setw -g utf8 on
 set -g bell-action any
 set -g visual-content on
 set -g visual-activity on
-set -g default-terminal screen-256color
+set -g default-terminal screen-256color-s
 set -g mouse-select-pane on
-set -g prefix C-a
+unbind home
+set -g prefix C-a,home
 bind C-a send-prefix
 #set -g set-remain-on-exit on
 set -g visual-bell off
@@ -23,6 +24,7 @@ setw -g mode-keys vi
 set-option -g status-keys vi
 
 # Make mouse useful in copy mode
+#set -g mouse-select-pane on 
 setw -g mode-mouse on
 
 # More straight forward key bindings for splitting
@@ -64,9 +66,9 @@ setw -g window-status-current-fg black
 setw -g clock-mode-colour green
 setw -g clock-mode-style 24
 
-set mouse=a
-set ttymouse=xterm2
-
+#set mouse=a
+#set ttymouse=xterm2
+#mode-mouse on
 unbind x
 bind-key x kill-pane
 
@@ -101,9 +103,9 @@ bind-key -n F12 next
 set -g base-index 1
 
 # session initialization
-new -s term
-neww -t 2
-neww -d -t 3
+#new -s term
+#neww -t 2
+#neww -d -t 3
 
 new -s uake
 neww -t 2
