--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -1,21 +1,23 @@
 "2.3.1 (created: 2010/04/07 18:25:13)
 
+loadplugins
 command! -nargs=* afs tabopen afs <args>
 command! -nargs=* aur tabopen aur <args>
 command! -nargs=* aw tabopen aw <args>
 command! -nargs=* g open google <args>
-"command! good noscript toggleperm
 command! -nargs=* hub tabopen hub <args>
 command! -nargs=* w tabopen w <args>
 command! -nargs=* wi tabopen w <args>
 command! -nargs=* y tabopen y <args>
 command! -nargs=* yt tabopen yt <args>
+command! -nargs=* ir open read 
+
 nnoremap <A-Right> gt
 nnoremap <A-Left> gT
 nnoremap F f
 nnoremap f F
 nnoremap S <C-c>
-nnoremap B :bmarks! -k<Space>
+nnoremap B :bmarks! -tags<Space>
 nnoremap b :bmark -tags<Space>
 "nnoremap n <C-i>
 nnoremap P p
@@ -23,16 +25,42 @@ nnoremap p P
 nnoremap <C-p> <C-^>
 nnoremap w <C-b>
 nnoremap s <Space>
-nnoremap <A-Down> <M-i>
-nnoremap <A-/> :bnext<Space>
+nnoremap <A-Down> <A-i>
+"nnoremap <A-/> :bnext<Space>
 nnoremap ` :bnext<Space>
 nnoremap <BS> <C-o>
+nnoremap `0 g0
+nnoremap `l g$
 set defsearch=g
 set editor="xterm -e /usr/bin/vim -f"
-loadplugins
 set mainecoon=am
 set runtimepath=/home/raghavendra/.vimperator
+"source! /home/raghavendra/.vimperatorrc.local
+
+command! -nargs=* tw tabopen tw <args>
+hi CmdLine font-family: "Lucida Console"; font-size: 10pt; font-weight: normal;
+"set complete=sl
+set guioptions=rb
+"command! good noscript toggleperm
+
+
+set visualbell
 "set wildoptions=auto
-source! /home/raghavendra/.vimperatorrc.local
+set wildmode=list:longest,full
+set focuscontent=on
+set newtab=all
+
+
+javascript <<EOF
+(function(){
+    var feedPanel = document.createElement("statusbarpanel");
+    feedPanel.setAttribute("id", "feed-panel-clone");
+    feedPanel.appendChild(document.getElementById("feed-button"));
+    feedPanel.firstChild.setAttribute("style", "padding: 0; max-height: 16px;");
+    document.getElementById("status-bar")
+            .insertBefore(feedPanel, document.getElementById("security-button"));
+})();
+EOF
+
 
 " vim: set ft=vimperator:
