--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,9 @@ setw -g xterm-keys on
 
 unbind C-b
 
+unbind C-a
+bind c new-window -a
+
 # Last active window
 unbind l
 bind C-a last-window
@@ -55,8 +58,8 @@ set -g status-left '#[fg=green]#H#[default]'
 set -g status-right  '#[fg=cyan,bold]%Y-%m-%d %H:%M:%S#[default]'
 
 # Notifying if other windows has activities
+# Experimental
 #setw -g monitor-activity on
-set -g visual-activity on
 
 # Highlighting the active window in status bar
 setw -g window-status-current-bg green
@@ -114,7 +117,12 @@ neww -d
 neww -d
 neww -d
 
-bind > send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
+unbind [
+bind-key [ copy-mode -u
+
+#bind > send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
+unbind ,
+bind , send-keys 'Enter' \; run-shell 'tmux paste-buffer | xsel -i' 
 #bind -t vi-copy -n Enter send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
 
 unbind ]
@@ -122,4 +130,11 @@ bind-key ] paste-buffer
 
 bind-key -t vi-edit Up history-up
 bind-key -t vi-edit Down history-down
-bind-key -t vi-edit C-u delete-line
+bind-key -t vi-edit C-k delete-line
+
+#bind-key -t vi-edit BS delete-word
+bind-key C-p pipe-pane -o 'cat >>/tmp/output.#S.#I-#P'
+set -g display-time 2000
+
+unbind r
+bind-key r rename-window 
