--- a/makepkg.conf
+++ b/makepkg.conf
@@ -18,7 +18,7 @@ CXXFLAGS="-march=native -O2 -flto  -pipe -ffast-math -ftracer -funswitch-loops -
 
 MAKEFLAGS="-j3"        
 # change commented to j3
-LDFLAGS="-Wl,-O1 -Wl,--as-needed -Wl,--hash-style=gnu"   
+LDFLAGS="-Wl,-O1 -Wl,--as-needed -Wl,--hash-style=gnu -s"   
 
 BUILDENV=(fakeroot !distcc color !ccache)
 
@@ -36,7 +36,7 @@ MAN_DIRS=({usr{,/local}{,/share},opt/*}/{man,info})
 PURGE_TARGETS=(usr/{,share}/info/dir .packlist *.pod)
 DOC_DIRS=(usr/{,local/}{,share/}{doc,gtk-doc} opt/*/{doc,gtk-doc})
 
-PACKAGER="Raghavendra D Prabhu <raghuDOTprabhu13ATgmaildOtcom>"
+PACKAGER="Raghavendra D Prabhu <raghuDOTprabhu13AtgmaildOtcom>"
 
 PKGEXT='.pkg.tar'
 SRCEXT='.src.tar.gz'
