--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,12 +48,13 @@ unbind o
 # Terminal emulator window title
 set -g set-titles on
 #set -g set-titles-string "#S:#I:#P:#(cat /proc/$$/cmdline | tr '\0' ' ')"
-set -g set-titles-string "#S:#I:#P:#W:#T"
+#set -g set-titles-string "#S:#I:#P:#W:#T"
+set -g set-titles-string "#T"
 # Status Bar
 set -g status-bg black
 set -g status-fg white
 set -g status-justify centre
-set -g status-interval 10
+set -g status-interval 20
 set -g status-left '#[fg=green]#H#[default]'
 set -g status-right  '#[fg=cyan,bold]%Y-%m-%d %H:%M:%S#[default]'
 
@@ -62,8 +63,8 @@ set -g status-right  '#[fg=cyan,bold]%Y-%m-%d %H:%M:%S#[default]'
 #setw -g monitor-activity on
 
 # Highlighting the active window in status bar
-setw -g window-status-current-bg green
-setw -g window-status-current-fg black
+#setw -g window-status-current-bg grey
+#setw -g window-status-current-fg black
 
 # Clock
 setw -g clock-mode-colour green
@@ -121,8 +122,8 @@ unbind [
 bind-key [ copy-mode -u
 
 #bind > send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
-unbind ,
-bind , send-keys 'Enter' \; run-shell 'tmux paste-buffer | xsel -i' 
+unbind >
+bind > send-keys 'Enter' \; run-shell 'tmux paste-buffer | xsel -i' 
 #bind -t vi-copy -n Enter send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
 
 unbind ]
@@ -136,5 +137,9 @@ bind-key -t vi-edit C-k delete-line
 bind-key C-p pipe-pane -o 'cat >>/tmp/output.#S.#I-#P'
 set -g display-time 2000
 
-unbind r
-bind-key r rename-window 
+#unbind r
+#bind-key r rename-window
+set -g lock-server off 
+set -g lock-command /usr/bin/vlock
+#set -g lock-after-time 1800
+
