--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -52,5 +52,6 @@ javascript <<EOF
 })();
 EOF
 
-bma -k=r http://reddit.com/r/%s/
+"bma -k=r http://reddit.com/r/%s/
 " vim: set ft=vimperator:
+colorscheme myzenburn
