--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ setw -g utf8 on
 set -g bell-action any
 set -g visual-content on
 set -g visual-activity on
-set -g default-terminal screen-256color-s
+set -g default-terminal screen-256color
 set -g mouse-select-pane on
 unbind home
 set -g prefix C-a,home
@@ -51,7 +51,7 @@ set -g set-titles on
 #set -g set-titles-string "#S:#I:#P:#W:#T"
 set -g set-titles-string "#T"
 # Status Bar
-set -g status-bg black
+set -g status-bg default
 set -g status-fg white
 set -g status-justify centre
 set -g status-interval 20
@@ -121,9 +121,10 @@ neww -d
 unbind [
 bind-key [ copy-mode -u
 
-#bind > send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
-unbind >
-bind > send-keys 'Enter' \; run-shell 'tmux paste-buffer | xsel -i' 
+bind > send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
+#unbind >
+#bind -t vi-copy > send-keys 'Enter' \; run-shell 'tmux paste-buffer | xsel -i' 
+#bind -t vi-copy '>' send-keys 'Enter' \; run-shell 'tmux paste-buffer | xsel -i' 
 #bind -t vi-copy -n Enter send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
 
 unbind ]
