--- a/.xmobarrc
+++ b/.xmobarrc
@@ -1,4 +1,4 @@
-Config { font = "xft:Consolas:size=11"
+Config { font = "xft:Consolas-10"
        , bgColor = "#1A1A1A"
        , fgColor = "#0000FF"
        , position = Top
@@ -7,12 +7,14 @@ Config { font = "xft:Consolas:size=11"
 					, Run Cpu ["-L","3","-H","50","--high","#f0c040"] 50
                     , Run Memory ["-t","Mem: <usedratio>%"] 50
                     , Run Com "cat /proc/loadavg | cut -d ' ' -f 1-3 " [] "loadavg" 50
+                    , Run Com "shellrun stemp" [] "Thermal" 100
                     , Run Com "date +'%b %d %H:%M'" [] "mdate" 60
-                    , Run Com  "mpc  -f [%artist%]-[%title%]:[%time%] | head -1 | cut -c -29" [] "mpd" 50
-                    , Run Com "~/bin/battery_mon" [] "battery" 50
+                    , Run Com  "~/bin/mpdStats" [] "mpd" 10
+                    , Run Com  "~/bin/downloadStats" [] "download" 200
+                    , Run Com "~/bin/battery_mon" [] "battery" 200
                     , Run StdinReader
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader%}{<fc=cyan>%mpd%</fc> | <fc=red>%battery%</fc><fc=lightbrown>%loadavg%</fc> / %eth0% / %cpu% | %memory% |<fc=darkgray>%mdate%</fc>"
+       , template = "%StdinReader%}{<fc=cyan>%mpd%</fc> ~ <fc=pink>%download% </fc><fc=red>%battery%</fc><fc=darkgray>%loadavg%</fc> / %eth0% / %cpu% | %memory% | <fc=darkgray>%mdate%</fc> ~> <fc=gray>%Thermal%</fc>"
        }
